<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Launcher.Menu">


    <Button
        android:id="@+id/media1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/media1"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/media2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/media2" />

    <Button
        android:id="@+id/valortrajeto"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/valortrajeto"
        />

    <Button
        android:id="@+id/calculoabastecimento"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/calculoabastecimento"
        android:layout_below="@+id/valortrajeto"
        />

    <Button
        android:id="@+id/gasolinaalcool"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/gasolinaalcool"
        />

    <Button
        android:id="@+id/configuracoes"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/configuracoes"
        />
    <Button
        android:id="@+id/cadastrarCarro"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/BotaoCadastrarCarro"
        />
    <Button
        android:id="@+id/consultaBanco"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Consulta Banco"
        />

</LinearLayout>