<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastraCarro">


    <TextView
        android:id="@+id/TxtNomeCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TxtNomeCarro" />
    <EditText
        android:id="@+id/EditNomeCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintNomeCarro"/>
    <TextView
        android:id="@+id/TxtConsumoCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TxtNomeCarro" />
    <EditText
        android:id="@+id/EditConsumoCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/HintConsumoCarro"/>

    <Button
        android:id="@+id/BotaoCadastrarCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />
</LinearLayout>