<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Launcher.InfoCarros"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="100dp"
        android:layout_gravity="top|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descreva seu carro"/>

    <TextView
        android:id="@+id/TxtModeloDoCarro"
        android:layout_marginTop="100dp"
        android:layout_gravity="top|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtModeloDoCarro"/>
    <EditText
        android:layout_gravity="top|center"
        android:id="@+id/EditModeloCarro"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
    <Switch
        android:checked="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="top|center"
        android:id="@+id/SwitchGasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchtxtGasolina" />
    <Switch
        android:checked="false"
        android:layout_gravity="top|center"
        android:id="@+id/SwitchAlcool"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/SwitchtxtAlcool" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/TxtConsumoDoCarro"
        android:layout_gravity="top|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtConsumoDoCarro"/>
    <EditText
        android:layout_gravity="top|center"
        android:id="@+id/EditConsumoCarro"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/BotaoIrParaMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Ir para o menu" />


</LinearLayout>